# ecotally-tool--

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  WINDOWS_SECURITY.md  build_windows.ps1  design-qa.md  desktop_entry.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml  windows-build.yml
examples/: community-matrix.csv  observations.csv  site-metadata.csv  traits.csv
packaging/: windows_version_info.txt
src/ecotally/: __init__.py  beta.py  cli.py  contribution.py  desktop.py  diversity.py  estimation.py  functional.py  inference.py  io.py  quality.py  summary.py  svg.py  uncertainty.py
tests/: test_beta.py  test_contribution.py  test_desktop.py  test_desktop_entry.py  test_diversity.py  test_estimation.py  test_functional.py  test_inference.py  test_io_cli.py  test_quality.py  test_release_metadata.py  test_summary.py  test_svg.py  test_uncertainty.py
