[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecotally"
version = "0.27.6"
description = "Transparent, dependency-light biodiversity analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "EcoTally contributors"}]
keywords = ["ecology", "biodiversity", "community-ecology"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
ecotally = "ecotally.cli:main"

[project.gui-scripts]
ecotally-desktop = "ecotally.desktop:main"

[tool.setuptools.packages.find]
where = ["src"]
